--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
     "nodemailer": "^6.7.8",
